tests/NormalTests/paczka1/fuzzy1/29911613.err
Error in line 4: QM86 A253 -1,8
Error in line 3: QM86 A253 11,0
Error in line 5: A688 A688 67,1
Error in line 14: A688 A201 56,4
Error in line 16: Jtt2i6HvD96 A201 64,5
Error in line 27: Jtt2i6HvD96 S897 63,0
Error in line 39: Cyi8SSRM A253 8,05
Error in line 37: 6vO01X S897 289,0
